# SoroForge-CLI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  initial_backlog.json  package-lock.json  package.json  soroforge.example.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: deploy.rs  init.rs  mod.rs  sandbox.rs  watch.rs
crates/soroforge-core/: Cargo.toml
crates/soroforge-core/src/: config.rs  error.rs  lib.rs
crates/soroforge-deploy/: Cargo.toml
crates/soroforge-deploy/src/: deployer.rs  lib.rs
crates/soroforge-sandbox/: Cargo.toml
crates/soroforge-sandbox/src/: lib.rs  sandbox.rs
