[package]
name = "soroforge-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "One-command Soroban contract deployment to testnet and mainnet"

[dependencies]
soroforge-core = { path = "../../crates/soroforge-core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
